--- a/src/config.yaml
+++ b/src/config.yaml
@@ -6,40 +6,19 @@ about:
   This is a BdSL Letter Classifier using Deep Learning built on top of Pytorch.
 
 
-  The project was build by [Nidhin Pattaniyil](https://npatta01.github.io)
-  and [Reshama Shaikh](https://reshamas.github.io).
+  The project was build by [Oishee Bintey Hoque](https://oishee30.github.io/OisheeBinteyHoque/)
 
 
   More info and the source code can he found below.
 
-
-  - [Blog](https://reshamas.github.io/deploying-deep-learning-models-on-web-and-mobile/)    
-
-  - [Web app](https://food-img-classifier.herokuapp.com)
-
-  - [Video](https://www.youtube.com/watch?v=7d2qFLeYvRc)
-
-
-  To try out this mobile app
-
-    - [Expo](https://expo.io/@npatta01/food-app)
-
-    - [Android](https://play.google.com/store/apps/details?id=com.rsnp.foodclassifier)
-
-    - [iOS](https://itunes.apple.com/us/app/food-classifier/id1445356461?ls=1&mt=8)
+  - [**Video of demo detection**](https://youtu.be/U1d2VqyKLXE)
+  - [**Reference of Letters**](https://drive.google.com/file/d/1viV8sFMeuYDNv5OW02ruPMfIR4N7Ijwh/view?usp=sharing)
 
 
 
-code: https://github.com/npatta01/web-deep-learning-classifier
+code: https://github.com/Oishee30/web-bdsl-classifier
 
 sampleImages:
-  - name: lasagne
-    url: https://upload.wikimedia.org/wikipedia/commons/b/ba/Lasagne_-_stonesoup.jpg
-  - name: sushi
-    url: https://upload.wikimedia.org/wikipedia/commons/6/60/Sushi_platter.jpg
-  - name: waffles
-    url: https://upload.wikimedia.org/wikipedia/commons/5/5b/Waffles_with_Strawberries.jpg
-  - name: eggplant (not in training data)
-    url: https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Solanum_melongena_24_08_2012_%281%29.JPG/1280px-Solanum_melongena_24_08_2012_%281%29.JPG
-  - name: table (not in training & not a food)
-    url: https://image.shutterstock.com/image-photo/brown-light-wooden-round-dining-260nw-588358070.jpg 
+  - name: BdSL
+    url: https://drive.google.com/file/d/1viV8sFMeuYDNv5OW02ruPMfIR4N7Ijwh/view?usp=sharing
+
